--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -111,6 +111,8 @@ dart_code_metrics:
     number-of-parameters: 4
     source-lines-of-code: 50
   metrics-exclude:
+    - lib/gen/**
+    - lib/configs/**
   rules:
     - newline-before-return
     - no-boolean-literal-compare
