--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_form_field_validator: ^1.0.0
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^1.1.0
   freezed_annotation: ^2.0.3
   intl: ^0.17.0
   json_annotation: ^4.5.0
@@ -43,14 +44,9 @@ dev_dependencies:
 
 flutter_gen:
   output: lib/gen/
-  assets:
-    enabled: true
-  fonts:
-    enabled: true
-  colors:
-    enabled: true
-    inputs:
-      - assets/color/colors.xml
+  integrations:
+    flutter_svg: true
+
 import_sorter:
   comments: false
 
@@ -58,4 +54,4 @@ flutter:
   uses-material-design: true
   generate: true
   assets:
-    - assets/
+    - assets/screens/
