--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dotted_border: ^2.0.0+2
   firebase_core: ^1.20.0
   flash: ^2.0.3+3
+
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
@@ -25,6 +26,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^1.1.0
+  flutter_switch: ^0.3.2
   form_builder_validators: ^8.3.0
 
   freezed_annotation: ^2.0.3
