Wire api homepage (#21)
* refactor: remove asset image (tire) bump apllication version to 1.0.0-dev+7 reorder arb files move files to its appropriated location (#18)

* build(deps): bump flutter_svg from 1.1.1+1 to 1.1.3 (#16)

Bumps [flutter_svg](https://github.com/dnfield/flutter_svg) from 1.1.1+1 to 1.1.3.
- [Release notes](https://github.com/dnfield/flutter_svg/releases)
- [Changelog](https://github.com/dnfield/flutter_svg/blob/master/CHANGELOG.md)
- [Commits](https://github.com/dnfield/flutter_svg/commits)

---
updated-dependencies:
- dependency-name: flutter_svg
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* refactor: fix harded code repair_service and request (#15)

* build(deps): bump revup_core from `b260221` to `3603dff` (#17)

Bumps revup_core from `b260221` to `3603dff`.

---
updated-dependencies:
- dependency-name: revup_core
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* refactor: remove asset image (tire)
bump apllication version to 1.0.0-dev+7
reorder arb files
move files to its appropriated location

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: namngoc231 <57516222+namngoc231@users.noreply.github.com>

* feat: implemnt login page

* feat: implement login page

* refactor : make format and analyze

* refactor: fix login and signup issues

* refactor: make analyze

* refactor: make analyze

* refactor: make analyze

* refactor: make analyze

* refactor: make analyze

* refactor: fix signup issue and homepage issues

* refactor: fixing signup issues and implement api for homepage

* refactor: make format make analyze

* refa

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   modal_bottom_sheet: ^2.1.0
   pin_code_fields: ^7.4.0
   revup_core:
+    # path: ../revup-core
     git:
       url: https://github.com/Revup-vn/revup-core.git
       ref: main
-      version: ^5.1.1-dev
+      version: ^6.0.1-dev
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
 
