--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,5 +37,11 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+      target.build_configurations.each do |config|
+        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+         if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 15.5
+           config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.5'
+         end
+      end
   end
 end
