--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  app_settings: ^4.1.8
   auto_route: ^4.2.1
   auto_size_text: ^3.0.0
   cached_network_image: ^3.2.1
