--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  app_settings: ^4.1.8
   auto_route: ^4.2.1
   auto_size_text: ^3.0.0
   cached_network_image: ^3.2.1
@@ -47,7 +48,7 @@ dependencies:
     git:
       url: https://github.com/Revup-vn/revup-core.git
       ref: main
-      version: ^6.0.2-dev
+      version: ^6.2.3-dev
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   url_launcher: ^6.1.5
