--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dio: ^4.0.1
   dotted_border: ^2.0.0+2
   firebase_core: ^1.20.0
+  fl_chart: ^0.55.1
   flash: ^2.0.3+3
   flutter:
     sdk: flutter
