--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   introduction_screen: ^3.0.1
   json_annotation: ^4.6.0
   loader_overlay: ^2.0.10
+  lottie: ^1.4.2
   map_launcher: ^2.3.0+1
   modal_bottom_sheet: ^2.1.0
   pin_code_fields: ^7.4.0
@@ -52,6 +53,7 @@ dependencies:
       version: ^6.3.5-dev
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
+  tiengviet: ^0.5.0
   url_launcher: ^6.1.5
 
 dev_dependencies:
