--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
     # path: ../revup-core
     git:
       url: https://github.com/Revup-vn/revup-core.git
-      ref: hotfix/istore-update
+      ref: main
       version: ^6.3.6-dev+1
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
@@ -85,4 +85,3 @@ flutter:
   assets:
     - assets/screens/
     - assets/common_service.json
-
