--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
     git:
       url: https://github.com/Revup-vn/revup-core.git
       ref: main
-      version: ^6.3.5-dev
+      version: ^6.3.6-dev + 1
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   url_launcher: ^6.1.5
