--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   freezed_annotation: ^2.0.3
   geoflutterfire2: ^2.3.12
   geolocator: ^9.0.1
-  google_maps_flutter: ^2.1.10
+  google_maps_flutter: ^2.2.0
   hive_flutter: ^1.1.0
   image_picker: ^0.8.5+3
   intl: ^0.17.0
@@ -49,8 +49,8 @@ dependencies:
     # path: ../revup-core
     git:
       url: https://github.com/Revup-vn/revup-core.git
-      ref: feature/notify-provider-info-update
-      version: ^6.3.7-dev+1
+      ref: main
+      version: ^6.3.8-dev
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   tiengviet: ^0.5.0
