--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0-dev+11
 publish_to: none
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   app_settings: ^4.1.8
@@ -50,7 +50,7 @@ dependencies:
     git:
       url: https://github.com/Revup-vn/revup-core.git
       ref: main
-      version: ^6.3.10-dev
+      version: ^6.3.10-dev+1
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   tiengviet: ^0.5.0
