--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
     git:
       url: https://github.com/Revup-vn/revup-core.git
       ref: main
-      version: ^6.3.10-dev
+      version: ^6.3.10-dev+1
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   tiengviet: ^0.5.0
