--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,4 +120,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
 }
