--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   auto_size_text: ^3.0.0
   cached_network_image: ^3.2.1
   card_swiper: ^2.0.4
+  connectycube_flutter_call_kit: ^2.0.8
+  connectycube_sdk: ^2.2.2
   dartz: ^0.10.1
   dio: ^4.0.1
   dotted_border: ^2.0.0+2
@@ -20,6 +22,7 @@ dependencies:
   flash: ^2.0.3+3
   flutter:
     sdk: flutter
+  flutter_background: ^1.1.0
   flutter_bloc: ^8.1.1
   flutter_form_builder: ^7.5.0
   flutter_form_field_validator: ^1.0.0
@@ -28,7 +31,7 @@ dependencies:
     sdk: flutter
   flutter_polyline_points: ^1.0.0
   flutter_rating_bar: ^4.0.1
-  flutter_svg: ^1.1.3
+  flutter_svg: ^1.0.3
   flutter_switch: ^0.3.2
   form_builder_validators: ^8.3.0
   freezed_annotation: ^2.0.3
@@ -44,6 +47,7 @@ dependencies:
   lottie: ^1.4.2
   map_launcher: ^2.3.0+1
   modal_bottom_sheet: ^2.1.0
+  package_info_plus: ^1.4.2
   pin_code_fields: ^7.4.0
   revup_core:
     # path: ../revup-core
@@ -65,12 +69,18 @@ dev_dependencies:
   flutter_gen_runner: ^4.1.6
   flutter_test:
     sdk: flutter
-  freezed: ^2.0.3+1
+  freezed: ^2.1.0+1
   import_sorter: ^4.6.0
   json_serializable: ^6.2.0
   mocktail: ^0.3.0
   very_good_analysis: ^3.0.1
-
+dependency_overrides:
+  webrtc_interface: 1.0.7
+  xmpp_stone:
+    git:
+      url: https://github.com/TatankaConCube/xmpp_dart.git
+      ref: fixes_and_improvements
+      version: ^0.3.3
 flutter_gen:
   output: lib/gen/
   integrations:
