--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   geoflutterfire2: ^2.3.12
   geolocator: ^9.0.1
   google_maps_flutter: ^2.2.0
+  google_sign_in: ^5.4.1
   hive_flutter: ^1.1.0
   image_picker: ^0.8.5+3
   intl: ^0.17.0
